# megaton-app

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml  weekly-with.yml
app/: __init__.py  i18n.py  main.py  streamlit_app.py
app/engine/: __init__.py  ga4.py  gsc.py  visualize.py
app/schemas/: __init__.py  params.py
app/ui/: ga4_fields.py  params_utils.py  query_builders.py  table_format.py
configs/: column_types.example.json  sites.example.json  sites.json
configs/weekly/: 01_gsc_queries_example.json
docs/: AGENT_GOTCHAS.md  CHANGELOG.md  PROGRESS.md  PYTHON_API.md  REFERENCE.md  USAGE.md  VALIDATION.md  improvement-plan-202602.md  improvement-plan.md
docs/releases/: v0.6.0.md
docs/templates/: validation_thin_entrypoint.py
input/: params.json  params.json.example  params_ga4.json.example
lib/: analysis.py  batch_runner.py  date_template.py  megaton_client.py  notebook.py  params_validator.py  result_inspector.py
megaton_lib/: __init__.py  analysis.py  articles.py  batch_runner.py  bigquery_utils.py  box_ui.py  cli_help.py  credentials.py  date_template.py  date_utils.py  dates.py  dei_ga4.py  docs_sites.py  env_utils.py  ga4_helpers.py  gmail_client.py  google_workspace.py  gsc_utils.py  gspread_lowlevel.py  http_fetch.py  job_manager.py  jptext.py  json_cache.py  login_gate.py  megaton_client.py  notebook.py  notify.py  params_diff.py  params_validator.py  periods.py  playwright_browser.py  query_runner.py  report_gmail_draft.py  report_run.py  report_validation.py  result_inspector.py  run_journal.py  scrape_errors.py  sheets.py  site_aliases.py  (+10 more)
megaton_lib/audit/: __init__.py  config.py  reporters.py  runner.py
megaton_lib/validation/: __init__.py  aa_api.py  adobe_analytics.py  auth_profiles.py  capy.py  contracts.py  followups.py  metadata.py  playwright_capture.py  playwright_pages.py  storefront_runtime.py
schemas/: query-params.schema.json
scripts/: audit.py  check_pending_verifications.py  check_validation_usage.py  fetch_ga4_megaton.py  fetch_ga4_organic.py  fetch_gsc_megaton.py  query.py  query_bq.py  query_ga4.py  query_gsc.py  run_notebook.py
tests/: conftest.py  test_aa_query_client.py  test_adobe_auth.py  test_adobe_tags_sync.py  test_analysis.py  test_app_engines.py  test_app_main.py  test_articles.py  test_audit_aa_classifications.py  test_audit_aa_cloud_locations.py  test_audit_aa_dw.py  test_audit_aa_provider.py  test_audit_adobe_tags_provider.py  test_audit_config.py  test_audit_gtm_provider.py  test_audit_gtm_sync.py  test_audit_runner.py  test_audit_site_mapping_task.py  test_batch.py  test_bigquery_utils.py  test_box_ui.py  test_cli_help.py  test_credentials.py  test_date_template.py  test_date_utils.py  test_dates_facade.py  test_dei_ga4.py  test_detect_datetime_x_axis.py  test_docs_sites.py  test_ga4_helpers.py  test_gmail_client.py  test_google_workspace.py  test_gsc_utils.py  test_gspread_a1_helpers.py  test_gspread_facade.py  test_gspread_lowlevel_retry.py  test_gspread_request_builders.py  test_http_fetch.py  test_i18n.py  test_job_manager.py  (+58 more)
(+45 files in other folders)
