[project]
name = "megaton-app"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "megaton>=1.0.0",
    "pandas",
]

[tool.setuptools.packages.find]
include = ["megaton_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers"]
markers = [
    "unit: fast, isolated tests (default layer)",
    "contract: interface/schema/output contract tests",
    "integration: cross-module flow tests",
]
