[project]
name = "megaton-app"
version = "0.9.0"
requires-python = ">=3.11"
dependencies = [
    "megaton>=1.0.0",
    "pandas",
    "requests",
]

[project.optional-dependencies]
audit = [
    "PyYAML",
]
dev = [
    "pytest",
    "pytest-cov",
]
google = [
    "google-api-python-client",
    "google-auth",
    "google-cloud-bigquery",
    "gspread",
]
notebook = [
    "ipywidgets",
    "japanize-matplotlib",
    "jupyter",
    "jupytext",
    "matplotlib",
    "plotly",
]
ui = [
    "plotly",
    "streamlit",
    "streamlit-autorefresh",
]
validation = [
    "playwright",
]
local = [
    "PyYAML",
    "google-api-python-client",
    "google-auth",
    "google-cloud-bigquery",
    "gspread",
    "ipywidgets",
    "japanize-matplotlib",
    "jupyter",
    "jupytext",
    "matplotlib",
    "playwright",
    "plotly",
    "pytest",
    "pytest-cov",
    "streamlit",
    "streamlit-autorefresh",
]

[tool.setuptools.packages.find]
include = ["megaton_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers"]
markers = [
    "unit: fast, isolated tests (default layer)",
    "contract: interface/schema/output contract tests",
    "integration: cross-module flow tests",
]
