[project]
name = "megaton-app"
version = "0.17.2"
requires-python = ">=3.11"
dependencies = [
    "megaton>=1.4.0",
    "pandas",
    "requests",
]

[project.optional-dependencies]
audit = [
    "PyYAML",
]
dev = [
    "pytest",
    "pytest-cov",
]
google = [
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-cloud-bigquery",
    "gspread",
]
notebook = [
    "ipywidgets",
    "japanize-matplotlib",
    "jupyter",
    "jupytext",
    "matplotlib",
    "plotly",
]
playwright = [
    "playwright>=1.40",
]
ui = [
    "plotly",
    "streamlit",
    "streamlit-autorefresh",
]
validation = [
    "numpy",
    "Pillow",
    "playwright",
]
local = [
    "PyYAML",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-cloud-bigquery",
    "gspread",
    "ipywidgets",
    "japanize-matplotlib",
    "jupyter",
    "jupytext",
    "matplotlib",
    "playwright",
    "plotly",
    "pytest",
    "pytest-cov",
    "streamlit",
    "streamlit-autorefresh",
]

[tool.setuptools.packages.find]
include = ["megaton_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers"]
markers = [
    "unit: fast, isolated tests (default layer)",
    "contract: interface/schema/output contract tests",
    "integration: cross-module flow tests",
]
